--- a/tasktrackpro/src/main/resources/application.properties
+++ b/tasktrackpro/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+#PORT SETUP
+server.port=8090
 
+# DB configuration 
+spring.datasource.name=demo
+spring.datasource.url=jdbc:postgresql://localhost:5432/EmployeeDB
+spring.datasource.username=postgres
+spring.datasource.password=system123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+ 
+ 
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+ 
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
