Reduce the loc  by using java 8 features

--- a/tasktrackpro/src/main/resources/application.properties
+++ b/tasktrackpro/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 #PORT SETUP
 server.port=8090
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
+#logging.level.org.springframework=DEBUG
 
 # DB configuration 
 spring.datasource.name=demo
