--- a/tasktrackpro/src/main/resources/application.properties
+++ b/tasktrackpro/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.name=demo
 spring.datasource.url=jdbc:postgresql://localhost:5432/EmpDB
 spring.datasource.username=postgres
-spring.datasource.password=Syngenta@123
+spring.datasource.password=SmartGrower#1234
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 
